перша ітерація, є проблемі з лінками

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,17 +9,17 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-        <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./css/main.css" />
     </head>
     <body>
         <header class="header">
-            <div class="conteiner conteiner-header">
-                <nav class="navigation">
-                    <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-                    <ul class="navigation-list list">
-                        <li class="navigation-item"><a class="link" href="./index.html">Студія</a></li>
-                        <li class="navigation-item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-                        <li class="navigation-item"><a class="link" href="#contact">Контакти</a></li>
+            <div class="conteiner-header">
+                <nav class="nav">
+                    <a class="nav__logo" href="./index.html"><span class="nav__logo--blue">Web</span>Studio</a>
+                    <ul class="nav__list">
+                        <li class="nav__item"><a class="nav__link" href="./index.html">Студія</a></li>
+                        <li class="nav__item"><a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#contact">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contact-list list">
